# 1fichier-dl

./: .gitignore  pyproject.toml
core/download/: helpers.py  workers.py
core/gui/: gui.py
